RESOLVED FIXED279080
REGRESSION (283015@main) : [ macOS wk2 Release ] fast/webgpu/nocrash/fuzz-277642.html is a constant crash.
https://bugs.webkit.org/show_bug.cgi?id=279080
Summary REGRESSION (283015@main) : [ macOS wk2 Release ] fast/webgpu/nocrash/fuzz-277...
Anfernee Viduya
Reported 2024-09-03 11:32:23 PDT
fast/webgpu/nocrash/fuzz-277642.html is a constant crash after 283015@main landed. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fwebgpu%2Fnocrash%2Ffuzz-277642.html LOCALLY PRODUCED LOG: Thread 8 Crashed:: WebGPU work queue 0 libsystem_kernel.dylib 0x19fb895f0 __pthread_kill + 8 1 libsystem_pthread.dylib 0x19fbc1c20 pthread_kill + 288 2 libsystem_c.dylib 0x19facea30 abort + 180 3 libsystem_c.dylib 0x19facdd20 __assert_rtn + 284 4 Metal 0x1aa086194 MTLReportFailure.cold.1 + 48 5 Metal 0x1aa062db0 MTLReportFailure + 464 6 Metal 0x1a9f327dc -[_MTLCommandEncoder dealloc] + 128 REPRODUCIBILITY: I am able to bisect the regression using command. run-webkit-tests 283015@main fast/webgpu/nocrash/fuzz-277642.html --iterations=5 DESCRIPTION: 283015@main had changes around webgpu, The current test expectation for the test are TIMEOUT, FAIL, PASS and has regressed to a crash.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-03 11:32:35 PDT
Mike Wyrzykowski
Comment 2 2024-09-03 11:56:00 PDT
EWS
Comment 3 2024-09-03 20:41:43 PDT
Committed 283130@main (f55e41f626a9): <https://commits.webkit.org/283130@main> Reviewed commits have been landed. Closing PR #33080 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.