REGRESSION (283015@main) : [ macOS wk2 Release ] fast/webgpu/nocrash/fuzz-277642.html is a constant crash. https://bugs.webkit.org/show_bug.cgi?id=279080 rdar://135213052

Reviewed by Dan Glastonbury.

283015@main set the open command buffers and encoders cache to nil when
the Queue becomes invalid, but we also need to make sure encoding has
ended on all encoders prior to doing so to avoid Metal validation errors
when the command encoder is deallocated.

* Source/WebGPU/WebGPU/Queue.mm
* Source/WebGPU/WebGPU/CommandEncoder.mm:

Canonical link: https://commits.webkit.org/283130@main